--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id = "outputRules"></div>
   </div>
 
-  <script src="css/scriptcopy.js"></script>
+  <script src="scriptcopy.js"></script>
   </main>
 
   <footer>
