--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!-- CSSをリセット -->
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <!-- CSSにリンク -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
   <!-- ブートストラップアイコン設定 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 </head>
@@ -55,8 +55,8 @@
   </div>
   
 
-  <div id = appendix>
-    <p id displayAppendix>参考情報</p>
+  <div id = "appendi"x>
+    <p id = "displayAppendix">参考情報</p>
     <div id = "outputRules"></div>
   </div>
 
