--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                  <!-- メインエリア -->
   <main>
     <div class="h2Container">
-      <h2>【STEP】 Input text→Click "GET CHECKED"</h2>
+      <h2>【STEP】 Input text→Click "PROOFREAD NOW"</h2>
     </div>
   <form id = "inputURL">
     <textarea id = "URLInput" placeholder="Websiteの場合はここにURLを入力してください"></textarea>
@@ -45,7 +45,7 @@
   </form>
 
   <div id = "checkButton">
-    <button type="button">GET CHECKED</button>
+    <button type="button">PROOFREAD NOW</button>
   </div>
 
   <div id = "output">
@@ -57,7 +57,7 @@
   </div>
   
   <div id = "referenceBox">
-    <p id = "TitleForAppendix">参考情報</p>
+    <p id = "TitleForAppendix"><strong>参考情報</strong></p>
     <div id = "outputRules"></div>
   </div>
 
