--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
   <script src="scriptcopy.js"></script>
  </main>
 
+  
+  　　　　　<!-- フッター -->
   <footer>
     <div>
       <small>&copy; Yoko.jp</small>
